# QtQhull

./: CMakeLists.txt  QtQhull_global.h  README.md  main.cpp  qtqhull.cpp  qtqhull.h
cmake/: Findqhull.cmake
